--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "node-sass": "^9.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
