--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
