--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "classnames": "^2.5.1",
+    "formik": "^2.4.5",
     "gh-pages": "^6.1.1",
     "node-sass": "^9.0.0",
     "normalize.css": "^8.0.1",
